--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^8.1.1
+  flutter_bloc: ^8.1.1
+  flutter_dotenv: ^5.0.0
+  http: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
