--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_dotenv: ^5.0.0
   http: ^1.1.0
+  equatable: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
