--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_dotenv: ^5.0.0
   http: ^1.1.0
   equatable: ^2.0.5
+  dartz: ^0.10.1
 
 
   # The following adds the Cupertino Icons font to your application.
