--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   bloc: ^8.1.1
   flutter_bloc: ^8.1.1  
+  provider: ^6.0.5
   flutter_dotenv: ^5.0.0
   http: ^1.1.0
   equatable: ^2.0.5
